rework change events - ChangeListener, ChangeAdapter, etc.